--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 body {
   background-image: url(movie-theatre-screen-red-seats.jpg);
   background-size: cover;
-
+  background-attachment: fixed;
 }
 
 .App {
